# rdltr

./: .flake8  .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.md  Makefile  Makefile.config  README.md  mypy.ini  pyproject.toml  setup.cfg
.github/workflows/: .tests-javascript.yml  .tests-python.yml
docs/: .buildinfo  changelog.html  features.html  genindex.html  index.html  installation.html  objects.inv  search.html  searchindex.js
docs/_sources/: changelog.md.txt  features.rst.txt  index.rst.txt  installation.rst.txt
docs/_static/: documentation_options.js
docsrc/source/: conf.py  features.rst  index.rst  installation.rst
migrations/versions/: 9b52e07d1b4b_.py
rdltr/: __init__.py  __main__.py  config.py
rdltr/articles/: articles.py  articles_utils.py  categories.py  model.py  tags.py
rdltr/migrations/: env.py
rdltr/migrations/versions/: 01_3a45dbc8708e_user.py  02_9b52e07d1b4b_articles.py  03_73ab306aefac_favorite.py
rdltr/tests/: conftest.py  test_api_articles.py  test_api_auth.py  test_api_categories.py  test_api_tags.py  test_auth_api.py  test_default_routes.py  test_model_articles.py  test_model_user.py  test_route_default.py  utils.py  utils_mock_server.py  utils_requests.py
rdltr/tests/tests/: test_api_articles.py  test_api_auth.py  test_api_categories.py  test_api_tags.py  test_default_routes.py  test_model_articles.py  test_model_user.py  test_utils_articles.py
rdltr/tests/ui_tests/: test_01_home.py  test_02_registration.py  test_03_login_and_logout.py  test_04_settings.py  test_05_articles.py
rdltr/users/: auth.py  model.py  utils.py
rdltr_front/: .eslintrc.js  .prettierrc  .prettierrc.json  README.md  index.html  package.json  vite.config.ts  vue.config.js
rdltr_front/config/: index.js
rdltr_front/public/: index.html
rdltr_front/src/: App.vue  main.js  main.ts  store.js  utils.js
rdltr_front/src/api/: authApi.js  authApi.ts  defaultApi.js  defaultApi.ts
rdltr_front/src/assets/: index.html
rdltr_front/src/components/: Header.vue  Home.vue  NotFound.vue  notFound.vue
rdltr_front/src/components/Article/: AddArticle.vue  ArticleCard.vue  ArticleComments.vue  ArticleContentDisplay.vue  ArticleDisplay.vue  ArticlesGrid.vue  Bookmarklet.vue  CategorySelect.vue  ClearFilter.vue  CustomBagde.vue  DeleteConfirmationModal.vue  FilterBar.vue  Pagination.vue
rdltr_front/src/components/Item/: Item.vue  ItemsList.vue  ItemsTable.vue  TagMultiSelect.vue
rdltr_front/src/components/User/: Profile.vue  UserForm.vue
rdltr_front/src/components/articles/: addArticle.vue  articleAdd.vue  articleCard.vue  articleComments.vue  articleContentDisplay.vue  articleDisplay.vue  articlesList.vue  bookmarklet.vue  clearFilter.vue  displayArticle.vue  displayArticleContent.vue
rdltr_front/src/components/auth/: login.vue  register.vue  userForm.vue
rdltr_front/src/components/common/: categoryBadge.vue  categorySelect.vue  customBagde.vue  deleteConfirmationModal.vue  item.vue  items.vue  itemsTable.vue  tagMultiSelect.vue
rdltr_front/src/components/dashboard/: dashboard.vue
rdltr_front/src/components/header/: header.vue
rdltr_front/src/components/home/: articles.vue  home.vue  pagination.vue
rdltr_front/src/components/settings/: categories.vue  category.vue  index.vue
rdltr_front/src/components/user/: userDetail.vue  userForm.vue
rdltr_front/src/router/: index.js  index.ts
rdltr_front/src/scss/: base.scss
rdltr_front/src/store/: index.js
rdltr_front/src/store/modules/: articles.js  categories.js  tags.js  user.js
rdltr_front/src/stores/: app.ts  articles.ts  items.ts  user.ts
rdltr_front/src/types/: index.ts
rdltr_front/src/utils/: index.ts
rdltr_front/src/views/: AddArticleView.vue  ArticleView.vue  BookmarkletView.vue  HomeView.vue  ItemView.vue  ItemsView.vue  NotFoundView.vue  ProfileView.vue  SettingsView.vue  UserFormView.vue
