[metadata]
name = rdltr
url = https://github.com/SamR1/rdltr
version = file: VERSION
description = simple read-it-later app
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v3.0
author = SamR1
platforms = linux
classifiers =
  Development Status :: 4 - Beta
  Framework :: Flask
  Intended Audience :: Developers
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Operating System :: POSIX :: Linux
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: JavaScript
  Topic :: Internet :: WWW/HTTP
project_urls =
  Documentation = https://samr1.github.io/rdltr

[options]
packages = find:
zip_safe = false
setup_requires = pytest-runner
install_requires =
  beautifulsoup4==4.9.3
  Flask==1.1.2
  Flask-Bcrypt==0.7.1
  Flask-Migrate==2.5.3
  Flask-SQLAlchemy==2.4.4
  gunicorn==20.0.4
  PyJWT==2.0.0
  readability-lxml==0.8.1
  requests==2.25.1
tests_require =
  pytest-black
  pytest-cov
  pytest-flake8
  pytest-html
  pytest-isort
  pytest-selenium


[options.extras_require]
test =
  pytest-black
  pytest-cov
  pytest-flake8
  pytest-html==2.0.1
  pytest-isort
  pytest-selenium
doc =
  sphinx
  sphinx_rtd_theme
  recommonmark

[options.package_data]
rdltr =
  VERSION
  migrations/*
  dist/*
  dist/static/*
  dist/static/css/*
  dist/static/js/*

[options.packages.find]
exclude =
  rdltr.tests
  rdltr.tests.tests

[options.entry_points]
console_scripts =
  rdltr = rdltr.__main__:main
  rdltr_db = rdltr.__main__:upgrade_db

[aliases]
test = pytest

[tool:pytest]
addopts = --flake8 --isort --black
norecursedirs = build dist .cache .eggs .git .venv migrations

[coverage:run]
omit = .*

[coverage:report]
omit =
  rdltr/migrations/*
  rdltr/tests/*

