[metadata]
name = rdltr
url = https://github.com/SamR1/rdltr
version = file: VERSION
description = simple read-it-later app
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v3.0
author = SamR1
platforms = linux
classifiers =
  Development Status :: 4 - Beta
  Framework :: Flask
  Intended Audience :: Developers
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Operating System :: POSIX :: Linux
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: JavaScript
  Topic :: Internet :: WWW/HTTP
project_urls =
  Documentation = https://samr1.github.io/rdltr

[options]
packages = find:
include_package_data = True
zip_safe = false
setup_requires = pytest-runner
install_requires =
  beautifulsoup4==4.11.1
  Flask==2.1.2
  Flask-Bcrypt==1.0.1
  Flask-Migrate==3.1.0
  Flask-SQLAlchemy==2.5.1
  gunicorn==20.1.0
  PyJWT==2.4.0
  readability-lxml==0.8.1
  requests==2.27.1
tests_require =
  pytest-black
  pytest-cov
  pytest-flake8
  pytest-html
  pytest-isort
  pytest-mypy
  pytest-selenium
  types-requests


[options.extras_require]
test =
  pytest-black
  pytest-cov
  pytest-flake8
  pytest-html==2.0.1
  pytest-isort
  pytest-mypy
  pytest-selenium
  types-requests
doc =
  sphinx
  sphinx_rtd_theme
  recommonmark

[options.package_data]
rdltr =
  VERSION
  migrations/*
  dist/*
  dist/static/*
  dist/static/css/*
  dist/static/js/*

[options.packages.find]
exclude =
  rdltr.tests
  rdltr.tests.tests

[options.entry_points]
console_scripts =
  rdltr = rdltr.__main__:main
  rdltr_db = rdltr.__main__:upgrade_db

[aliases]
test = pytest

[tool:pytest]
norecursedirs = build dist .cache .eggs .git .venv migrations

[coverage:run]
omit = .*

[coverage:report]
omit =
  rdltr/migrations/*
  rdltr/tests/*

